<package format="3">
  <name>jsk_topic_tools</name>
  <version>2.2.11</version>
  <description>jsk_topic_tools</description>
  <maintainer email="k-okada@jsk.t.u-tokyo.ac.jp">Kei Okada</maintainer>
  <maintainer email="ueda@jsk.t.u-tokyo.ac.jp">Ryohei Ueda</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/jsk_topic_tools</url>
  <!-- <url type="bugtracker"></url> -->

  <author email="k-okada@jsk.t.u-tokyo.ac.jp">Kei Okada</author>
  <author email="furuta@jsk.t.u-tokyo.ac.jp">Yusuke Furuta</author>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- list build_depend in alphabetical order -->
  <build_depend>diagnostic_msgs</build_depend>
  <build_depend>diagnostic_updater</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>dynamic_tf_publisher</build_depend>
  <build_depend>eigen_conversions</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend version_gte="1.9.11">nodelet</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslaunch</build_depend>
  <build_depend>rosnode</build_depend>
  <build_depend>rostest</build_depend>
  <build_depend>rostime</build_depend>
  <build_depend>rostopic</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>topic_tools</build_depend>

  <!-- list exec_depend in alphabetical order -->
  <exec_depend>diagnostic_msgs</exec_depend>
  <exec_depend>diagnostic_updater</exec_depend>
  <exec_depend>dynamic_reconfigure</exec_depend>
  <exec_depend>dynamic_tf_publisher</exec_depend>
  <exec_depend>eigen_conversions</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend version_gte="1.9.11">nodelet</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-opencv</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-opencv</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-numpy</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-numpy</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-scipy</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-scipy</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>roslaunch</exec_depend>
  <exec_depend>rosnode</exec_depend>
  <exec_depend>rostime</exec_depend>
  <exec_depend>rostopic</exec_depend>
  <exec_depend>sound_play</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>topic_tools</exec_depend>

  <!-- list test_depend in alphabetical order -->
  <test_depend>roscpp_tutorials</test_depend>
  <test_depend>roslint</test_depend>

  <export>
    <nodelet plugin="${prefix}/jsk_topic_tools_nodelet.xml"/>
    <nodelet plugin="${prefix}/jsk_topic_tools_test_nodelet.xml"/>
  </export>
</package>
