<package format="3">
  <name>jsk_topic_tools</name>
  <version>2.2.16</version>
  <description>jsk_topic_tools</description>
  <maintainer email="k-okada@jsk.t.u-tokyo.ac.jp">Kei Okada</maintainer>
  <maintainer email="ueda@jsk.t.u-tokyo.ac.jp">Ryohei Ueda</maintainer>
  <maintainer email="obinata@jsk.imi.i.u-tokyo.ac.jp">Yoshiki Obinata</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/jsk_topic_tools</url>
  <!-- <url type="bugtracker"></url> -->

  <author email="k-okada@jsk.t.u-tokyo.ac.jp">Kei Okada</author>
  <author email="furuta@jsk.t.u-tokyo.ac.jp">Yusuke Furuta</author>
  <author email="obinata@jsk.imi.i.u-tokyo.ac.jp">Yoshiki Obinata</author>

  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake_auto</buildtool_depend>

  <!-- ROS2 dependencies -->
  <depend condition="$ROS_VERSION == 2">lifecycle_msgs</depend>
  <depend condition="$ROS_VERSION == 2">rclcpp</depend>
  <depend condition="$ROS_VERSION == 2">rclcpp_components</depend>
  <depend condition="$ROS_VERSION == 2">rclcpp_lifecycle</depend>

  <build_depend condition="$ROS_VERSION == 1">diagnostic_msgs</build_depend>
  <build_depend condition="$ROS_VERSION == 1">diagnostic_updater</build_depend>
  <build_depend condition="$ROS_VERSION == 1">dynamic_reconfigure</build_depend>
  <build_depend condition="$ROS_VERSION == 1">dynamic_tf_publisher</build_depend>
  <build_depend condition="$ROS_VERSION == 1">eigen_conversions</build_depend>
  <build_depend condition="$ROS_VERSION == 1">geometry_msgs</build_depend>
  <build_depend condition="$ROS_VERSION == 1">image_transport</build_depend>
  <build_depend condition="$ROS_VERSION == 1">message_generation</build_depend>
  <build_depend condition="$ROS_VERSION == 1">nodelet</build_depend>
  <build_depend condition="$ROS_VERSION == 1">roscpp</build_depend>
  <build_depend condition="$ROS_VERSION == 1">roslaunch</build_depend>
  <build_depend condition="$ROS_VERSION == 1">rosnode</build_depend>
  <build_depend condition="$ROS_VERSION == 1">rostest</build_depend>
  <build_depend condition="$ROS_VERSION == 1">rostime</build_depend>
  <build_depend condition="$ROS_VERSION == 1">rostopic</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend condition="$ROS_VERSION == 1">std_srvs</build_depend>
  <build_depend condition="$ROS_VERSION == 1">tf</build_depend>
  <build_depend condition="$ROS_VERSION == 1">topic_tools</build_depend>

  <!-- list exec_depend in alphabetical order -->
  <exec_depend condition="$ROS_VERSION == 1">diagnostic_aggregator</exec_depend>
  <exec_depend condition="$ROS_VERSION == 1">diagnostic_msgs</exec_depend>
  <exec_depend condition="$ROS_VERSION == 1">diagnostic_updater</exec_depend>
  <exec_depend condition="$ROS_VERSION == 1">dynamic_reconfigure</exec_depend>
  <exec_depend condition="$ROS_VERSION == 1">dynamic_tf_publisher</exec_depend>
  <exec_depend condition="$ROS_VERSION == 1">eigen_conversions</exec_depend>
  <exec_depend condition="$ROS_VERSION == 1">geometry_msgs</exec_depend>
  <exec_depend condition="$ROS_VERSION == 1">image_transport</exec_depend>
  <exec_depend condition="$ROS_VERSION == 1">iputils-ping</exec_depend>
  <exec_depend condition="$ROS_VERSION == 1">message_runtime</exec_depend>
  <exec_depend condition="$ROS_VERSION == 1">nodelet</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-opencv</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-opencv</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-numpy</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-numpy</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-scipy</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-scipy</exec_depend>
  <exec_depend condition="$ROS_VERSION == 1">roscpp</exec_depend>
  <exec_depend condition="$ROS_VERSION == 1">roslaunch</exec_depend>
  <exec_depend condition="$ROS_VERSION == 1">rosnode</exec_depend>
  <exec_depend condition="$ROS_VERSION == 1">rostime</exec_depend>
  <exec_depend condition="$ROS_VERSION == 1">rostopic</exec_depend>
  <exec_depend condition="$ROS_VERSION == 1">sound_play</exec_depend>
  <exec_depend condition="$ROS_VERSION == 1">sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend condition="$ROS_VERSION == 1">std_srvs</exec_depend>
  <exec_depend condition="$ROS_VERSION == 1">tf</exec_depend>
  <exec_depend condition="$ROS_VERSION == 1">topic_tools</exec_depend>

  <!-- list test_depend in alphabetical order -->
  <test_depend condition="$ROS_VERSION == 2">ament_cmake_clang_format</test_depend>
  <test_depend condition="$ROS_VERSION == 2">launch_ros</test_depend>
  <test_depend condition="$ROS_VERSION == 2">launch_testing</test_depend>
  <test_depend condition="$ROS_VERSION == 2">launch_testing_ament_cmake</test_depend>
  <test_depend condition="$ROS_VERSION == 1">roscpp_tutorials</test_depend>
  <test_depend condition="$ROS_VERSION == 1">roslint</test_depend>

  <export>
    <nodelet plugin="${prefix}/jsk_topic_tools_nodelet.xml"/>
    <nodelet plugin="${prefix}/jsk_topic_tools_test_nodelet.xml"/>
    <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
  </export>
</package>
